--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Главная</title>
-    <link rel="stylesheet" href="
-        https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=fallback"
+        rel="stylesheet">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/style.css" />
 </head>
 
@@ -19,12 +19,12 @@
             <p class="logo">
                 <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
             </p>
-            <ul class="main-menu">
-                <li class="main-menu-item">
-                    <a href="#" class="focused">Студия</a>
+            <ul class="main-menu list">
+                <li class="main-menu item">
+                    <a href="#" class="focused current">Студия</a>
                 </li>
-                <li class="main-menu-item">
-                    <a href="portfolio.html" class="focused">Портфолио</a>
+                <li class="main-menu item">
+                    <a href="./portfolio.html" class="focused">Портфолио</a>
                 </li>
                 <li class="main-menu-item">
                     <a href="#contact" class="focused">Контакты</a>
@@ -32,12 +32,12 @@
             </ul>
         </nav>
         <!-- шапка, контакты -->
-        <ul class="main-menu-contact">
-            <li class="main-menu-contact-item">
-                <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+        <ul class="main-menu contact list">
+            <li class="main-menu contact item">
+                <a href="mailto:info@devstudio.com" class="focused contact-link">info@devstudio.com</a>
             </li>
-            <li class="main-menu-contact-item">
-                <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+            <li class="main-menu contact item">
+                <a href="tel:+380961111111" class="focused contact-link">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
@@ -47,11 +47,9 @@
 
         <div class="picture-banner">
             <section>
-                <img src="images/bg.jpg" alt="photo" width="1600" />
                 <h1 class="order-title">Эффективные решения<br>для вашего бизнеса</h1>
-                <button class="order">
-                    <a href="#" class="main-filters-link">Заказать услугу</a>
-                </button>
+                <a href="#" class="button">Заказать услугу</a>
+
             </section>
         </div>
 
@@ -59,7 +57,8 @@
         <section class="features">
             <h2 class="features-title">Особенности</h2>
             <!-- скрыть элемент  -->
-            <ul class="features-list">
+
+            <ul class="features-list list">
                 <li class="features-list-item">
                     <p class="features-uppercase">Внимание к деталям</p>
                     <span class="features-list-text">Идейные соображения, а также начало повседневной работы по
@@ -89,7 +88,7 @@
         <!-- чем мы занимаемся -->
         <section class="direction">
             <h2 class="direction-title">Чем мы занимаемся</h2>
-            <ul class="direction-list">
+            <ul class="direction-list list">
                 <li class="direction-list-item">
                     <img src="images/box1.jpg" alt="photo" width="370" />
                 </li>
@@ -104,25 +103,25 @@
         <!-- наша команда -->
         <section class="team">
             <h2 class="team-title">Наша команда</h2>
-            <ul class="time-list">
-                <li class="team-list-item">
+            <ul class="time-list list">
+                <li class="team-list item">
                     <img src="images/team1.jpg" alt="photo" width="270" />
-                    <h4>Игорь Демьяненко</h4>
+                    <h4 class="name">Игорь Демьяненко</h4>
                     <p class="subtitle">Product Designer</p>
                 </li>
-                <li class="team-list-item">
+                <li class="team-list item">
                     <img src="images/team2.jpg" alt="photo" width="270" />
-                    <h4>Ольга Репина</h4>
+                    <h4 class="name">Ольга Репина</h4>
                     <p class="subtitle">Frontend Developer</p>
                 </li>
-                <li class="team-list-item">
+                <li class="team-list item">
                     <img src="images/team3.jpg" alt="photo" width="270" />
-                    <h4>Николай Тарасов</h4>
+                    <h4 class="name">Николай Тарасов</h4>
                     <p class="subtitle">Marketing</p>
                 </li>
-                <li class="team-list-item">
+                <li class="team-list item">
                     <img src="images/team4.jpg" alt="photo" width="270" />
-                    <h4>Михаил Ермаков</h4>
+                    <h4 class="name">Михаил Ермаков</h4>
                     <p class="subtitle">UI Designer</p>
                 </li>
             </ul>
@@ -131,18 +130,18 @@
     <!-- подвал, лого и контакты -->
     <footer id="contact" class="main-footer">
         <p class="logo">
-            <a href="#" class="logo-half"><span class="logo-blue">Web</span>Studio</a>
+            <a href="#" class="focused logo-half"><span class="logo-blue">Web</span>Studio</a>
         </p>
         <address class="main-footer-addressbar">
             г. Киев, пр-т Леси Украинки, 26
         </address>
         <address>
-            <ul>
+            <ul class="list">
                 <li>
-                    <a href="mailto:info@devstudio.com" class="contact-link-footer">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="focused contact-link-footer">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111" class="contact-link-footer">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="focused contact-link-footer">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
