--- a/portfolio.html
+++ b/portfolio.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700&display=fallback"
+        rel="stylesheet">
+    <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/style.css" />
-    <link rel="stylesheet" href="
-        https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+
+
 </head>
 
 <body>
@@ -18,110 +20,133 @@
             <p class="logo">
                 <a href="#" class="focused"><span class="logo-blue">Web</span>Studio</a>
             </p>
-            <ul class="main-menu">
-                <li class="main-menu-item">
-                    <a href="index.html" class="focused">Студия</a>
+            <ul class="main-menu list">
+                <li class="main-menu item">
+                    <a href="./index.html" class="focused">Студия</a>
                 </li>
-                <li class="main-menu-item">
-                    <a href="#" class="focused">Портфолио</a>
+                <li class="main-menu item">
+                    <a href="#" class="focused current">Портфолио</a>
                 </li>
-                <li class="main-menu-item">
+                <li class="main-menu item">
                     <a href="#contact" class="focused">Контакты</a>
                 </li>
             </ul>
         </nav>
         <!-- шапка, контакты -->
-        <ul class="main-menu-contact">
-            <li class="main-menu-contact-item">
-                <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+        <ul class="main-menu-contact list">
+            <li class="main-menu-contact item">
+                <a href="mailto:info@devstudio.com" class="focused contact-link">info@devstudio.com</a>
             </li>
-            <li class="main-menu-contact-item">
-                <a href="tel:+380961111111" class="contact-link">+38 096 111 11 11</a>
+            <li class="main-menu-contact item">
+                <a href="tel:+380961111111" class="focused contact-link">+38 096 111 11 11</a>
             </li>
         </ul>
     </header>
     <!-- тело -->
     <main class="main-content">
+
+        <!-- <h1>Портфолио</h1> -->
+        <!-- Скрыть элемент h1 -->
         <!-- Фильтр -->
         <nav>
-            <ul class="main-filters">
-                <li class="main-filters-item">
-                    <button class="focused-button filter">
-                        <a href="#" class="main-filters-link">Все</a>
+            <ul class="main-filters list">
+                <li class="main-filters item">
+                    <button type="button" class="focused-button">Все
+                        <!-- <a href="#" class="main-filters-link"></a> -->
                     </button>
                 </li>
-                <li class="main-filters-item">
-                    <button class="focused-button filter">
-                        <a href="#" class="main-filters-link">Веб-сайты</a>
+                <li class="main-filters item">
+                    <button type="button" class="focused-button">Веб-сайты
+                        <!-- <a href="#" class="main-filters-link"></a> -->
                     </button>
                 </li>
-                <li class="main-filters-item">
-                    <button class="focused-button filter">
-                        <a href="#" class="main-filters-link">Приложения</a>
+                <li class="main-filters item">
+                    <button type="button" class="focused-button">Приложения
+                        <!-- <a href="#" class="main-filters-link"></a> -->
                     </button>
                 </li>
-                <li class="main-filters-item">
-                    <button class="focused-button filter">
-                        <a href="#" class="main-filters-link">Дизайн</a>
+                <li class="main-filters item">
+                    <button type="button" class="focused-button">Дизайн
+                        <!-- <a href="#" class="main-filters-link"></a> -->
                     </button>
                 </li>
-                <li class="main-filters-item">
-                    <button class="focused-button filter">
-                        <a href="#" class="main-filters-link">Маркетинг</a>
+                <li class="main-filters item">
+                    <button type="button" class="focused-button">Маркетинг
+                        <!-- <a href="#" class="main-filters-link"></a> -->
                     </button>
                 </li>
             </ul>
         </nav>
         <section>
-            <ul>
+            <ul class="list">
                 <li>
-                    <img src="imagesPortfolio/technocryk.jpg" alt="Пример дизайна веб-сайта" width="370" height="294" />
-                    <h3>Технокряк</h3>
-                    <p class="subtitle">Веб-сайт</p>
+                    <a href="" class="link">
+                        <img src="imagesPortfolio/technocryk.jpg" alt="Пример дизайна веб-сайта" width="370"
+                            height="294" />
+                        <h3 class="title">Технокряк</h3>
+                        <p class="subtitle">Веб-сайт</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/neworlean.jpg" alt="Дизайн постера с баскетболистами в прыжке с мячём"
-                        width="370" height="294" />
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p class="subtitle">Дизайн</p>
+                    <a href="" class="link">
+                        <img src="imagesPortfolio/neworlean.jpg" alt="Дизайн постера с баскетболистами в прыжке с мячём"
+                            width="370" height="294" />
+                        <h3 class="title">Постер New Orlean vs Golden Star</h3>
+                        <p class="subtitle">Дизайн</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/seafood.jpg" alt="Логотип рестарана Seafood" width="370" height="294" />
-                    <h3>Ресторан Seafood</h3>
-                    <p class="subtitle">Приложение</p>
+                    <a href="" class="link">
+                        <img src="imagesPortfolio/seafood.jpg" alt="Логотип рестарана Seafood" width="370"
+                            height="294" />
+                        <h3 class="title">Ресторан Seafood</h3>
+                        <p class="subtitle">Приложение</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/prime.jpg" alt="Чёрные наушники" width="370" height="294" />
-                    <h3>Проект Prime</h3>
-                    <p class="subtitle">Маркетинг</p>
+                    <a href="" class="link">
+                        <img src="imagesPortfolio/prime.jpg" alt="Чёрные наушники" width="370" height="294" />
+                        <h3 class="title">Проект Prime</h3>
+                        <p class="subtitle">Маркетинг</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/boxes.jpg" alt="Две коробки" width="370" height="294" />
-                    <h3>Проект Boxes</h3>
-                    <p class="subtitle">Приложение</p>
+                    <a href="" class="link">
+                        <img src="imagesPortfolio/boxes.jpg" alt="Две коробки" width="370" height="294" />
+                        <h3 class="title">Проект Boxes</h3>
+                        <p class="subtitle">Приложение</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/borders.jpg" alt="Монитор с веб-сайтом" width="370" height="294" />
-                    <h3>Inspiration has no Borders</h3>
-                    <p class="subtitle">Веб-сайт</p>
+                    <a href="" class="link">
+                        <img src="imagesPortfolio/borders.jpg" alt="Монитор с веб-сайтом" width="370" height="294" />
+                        <h3 class="title">Inspiration has no Borders</h3>
+                        <p class="subtitle">Веб-сайт</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/limeted.jpg"
-                        alt="Разворот книги с иллюстрацией и заголовком I'am Limited Edition" width="370"
-                        height="294" />
-                    <h3>Издание Limited Edition</h3>
-                    <p class="subtitle">Дизайн</p>
+                    <a href="" class="link">
+                        <img src="imagesPortfolio/limeted.jpg"
+                            alt="Разворот книги с иллюстрацией и заголовком I'am Limited Edition" width="370"
+                            height="294" />
+                        <h3 class="title">Издание Limited Edition</h3>
+                        <p class="subtitle">Дизайн</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/lab.jpg" alt="Ярлык с надписью LAB EL TAG" width="370" height="294" />
-                    <h3>Проект LAB</h3>
-                    <p class="subtitle">Маркетинг</p>
+                    <a href="" class="link">
+                        <img src="imagesPortfolio/lab.jpg" alt="Ярлык с надписью LAB EL TAG" width="370" height="294" />
+                        <h3 class="title">Проект LAB</h3>
+                        <p class="subtitle">Маркетинг</p>
+                    </a>
                 </li>
                 <li>
-                    <img src="imagesPortfolio/business.jpg" alt="Работающий ноутбук с заставкой Growing Business"
-                        width="370" height="294" />
-                    <h3>Growing Business</h3>
-                    <p class="subtitle">Приложение</p>
+                    <a href="" class="link">
+                        <img src="imagesPortfolio/business.jpg" alt="Работающий ноутбук с заставкой Growing Business"
+                            width="370" height="294" />
+                        <h3 class="title">Growing Business</h3>
+                        <p class="subtitle">Приложение</p>
+                    </a>
                 </li>
             </ul>
         </section>
@@ -129,18 +154,18 @@
     <!-- подвал, лого и контакты -->
     <footer id="contact" class="main-footer">
         <p class="logo">
-            <a href="#" class="logo-half"><span class="logo-blue">Web</span>Studio</a>
+            <a href="#" class="focused logo-half"><span class="logo-blue">Web</span>Studio</a>
         </p>
         <address class="main-footer-addressbar">
             г. Киев, пр-т Леси Украинки, 26
         </address>
         <address>
-            <ul>
+            <ul class="list">
                 <li>
-                    <a href="mailto:info@devstudio.com" class="contact-link-footer">info@devstudio.com</a>
+                    <a href="mailto:info@devstudio.com" class="focused contact-link-footer">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111" class="contact-link-footer">+38 096 111 11 11</a>
+                    <a href="tel:+380961111111" class="focused contact-link-footer">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
